# player

./: CMakeLists.txt  main.cpp
include/: audiooutput.h  avframequeue.h  avpacketqueue.h  avsync.h  codecthread.h  demuxthread.h  ffmpeg_utils.h  lockedqueue.h  videooutput.h
include/ffmpeg/: avcodec  avdevice  avfilter  avformat  avutil  ffmpeg  postproc  rescale  swresample  swrescale
src/: audiooutput.cpp  codecthread.cpp  demuxthread.cpp  videooutput.cpp
